# Aegis-BPF-CO-RE-Enforcement-Prototype

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_v0.1.1.md  Dockerfile  README.md  RELEASE_SUMMARY_v0.1.1.md  ROLLOUT_CHECKLIST.md  SECURITY.md  SECURITY_FIX_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: benchmark.yml  branch-protection-audit.yml  canary.yml  ci.yml  e2e.yml  go-live-gate.yml  incident-drill.yml  kernel-matrix-dispatch.yml  kernel-matrix.yml  key-rotation-drill.yml  nightly-fuzz.yml  perf.yml  release-drill.yml  release-readiness.yml  release.yml  reproducibility.yml  security.yml  soak.yml
bpf/: aegis.bpf.c
config/: event-schema.json  policy-production.conf  required_checks.txt  required_checks_release.txt
config/grafana/: dashboard.json
config/prometheus/: alerts.yml
dev/bench/: data.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  BPF_VERIFICATION_BYPASS.md  BRANCH_PROTECTION.md  BYPASS_CATALOG.md  CANARY_RUNBOOK.md  CAPACITY_PLANNING.md  CHANGELOG.md  CI_EXECUTION_STRATEGY.md  COMPATIBILITY.md  DESIGN_ARTIFACT_STATUS.md  DESIGN_PDF_SOURCES.md  DEVELOPER_GUIDE.md  EDGE_CASE_COMPLIANCE_RESULTS.md  EDGE_CASE_COMPLIANCE_SUITE.md  ENFORCEMENT_SEMANTICS_WHITEPAPER.md  ERROR_HANDLING.md  EVIDENCE.md  EXCELLENCE_SUMMARY.md  EXTERNAL_REVIEW_STATUS.md  EXTERNAL_VALIDATION.md  GO_LIVE_CHECKLIST.md  INCIDENT_RESPONSE.md  KEY_MANAGEMENT.md  MARKET_LEADERSHIP_PLAN.md  MARKET_SCORECARD.md  MATURITY_PROGRAM.md  METRICS_OPERATIONS.md  MONITORING_GUIDE.md  NETWORK_LAYER_DESIGN.md  PERF.md  PERF_BASELINE.md  PHASE1_PRODUCT_CONTRACT_EVIDENCE.md  PHASE2_CORRECTNESS_EVIDENCE.md  PHASE3_OPERATIONAL_SAFETY_EVIDENCE.md  PHASE4_PORTABILITY_EVIDENCE.md  PHASE5_PERFORMANCE_EVIDENCE.md  PHASE6_META_SECURITY_EVIDENCE.md  PHASE7_REVIEWABILITY_EVIDENCE.md  PILOT_EVIDENCE_TEMPLATE.md  (+25 more)
docs/man/: aegisbpf.1.md
docs/pilots/: README.md  pilot-internal-a-2026w06.md  pilot-internal-b-2026w06.md
evidence/: README.md  trust_report_2026-02-07_21-11-21.txt
evidence/security/: binary_hardening_2026-02-07_21-11-21.txt  secrets_scan_2026-02-07_21-11-21.txt  security_fix_2026-02-07_21-11-21.txt  vuln_scan_2026-02-07_21-11-21.txt
evidence/supply-chain/: dep_hashes_2026-02-07_21-11-21.txt
evidence/testing/: test_results_2026-02-07_21-11-21.txt  test_results_2026-02-07_21-11-21.xml
helm/aegisbpf/: Chart.yaml  values.yaml
helm/aegisbpf/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  serviceaccount.yaml
packaging/systemd/: aegisbpf.env  aegisbpf.service
sbom/: sbom.cyclonedx.json  sbom.spdx.json  sbom.txt
scripts/: canary_deploy.sh  canary_gate.sh  check_branch_protection.sh  check_reproducible_build.sh  collect_incident_bundle.sh  dev_check.sh  e2e_file_enforcement_matrix.sh  generate_design_pdf.sh  generate_sbom.sh  key_rotation_drill.sh  local_test.sh  perf_compare.sh  perf_connect_bench.sh  perf_workload_suite.sh  phase0_validation.sh  plot_soak_metrics.py  quick_local_test.sh  reference_enforcement_slice.sh  release_drill.sh  release_readiness.sh  rollback.sh  sign_policy_external.sh  smoke_audit.sh  smoke_enforce.sh  soak_monitor.sh  soak_reliability.sh  test_build_performance.sh  test_web_performance.sh  validate_capability_contract.py  validate_e2e_matrix_summary.py  validate_event_schema.py  validate_perf_artifacts.py  validate_required_checks.py  verify_env.sh  verify_security_fix.sh  verify_trustworthiness.sh
src/: bpf_ops.cpp  bpf_ops.hpp  cli_common.cpp  cli_common.hpp  cli_dispatch.cpp  cli_dispatch.hpp  cli_network.cpp  cli_network.hpp  cli_policy.cpp  cli_policy.hpp  cli_run.cpp  cli_run.hpp  commands.cpp  commands.hpp  commands_block_allow.cpp  commands_block_allow.hpp  commands_keys_survival.cpp  commands_keys_survival.hpp  commands_monitoring.cpp  commands_monitoring.hpp  commands_network.cpp  commands_network.hpp  commands_policy.cpp  commands_policy.hpp  crypto.cpp  crypto.hpp  daemon.cpp  daemon.hpp  daemon_test_hooks.hpp  error_codes.hpp  events.cpp  events.hpp  kernel_features.cpp  kernel_features.hpp  logging.hpp  main.cpp  network_ops.cpp  network_ops.hpp  policy.cpp  policy.hpp  (+12 more)
tests/: bench_policy.cpp  check_docs_security_contract.py  check_failure_modes_contract.py  check_market_leadership_contract.py  check_metrics_contract.py  check_phase1_product_contract.py  check_phase2_evidence_contract.py  check_phase3_safety_contract.py  check_phase4_portability_contract.py  check_phase5_performance_contract.py  check_phase6_meta_security_contract.py  check_phase7_reviewability_contract.py  check_slo_contract.py  check_superphase_c_adoption_contract.py  check_support_policy.py  check_systemd_policy_prestart.py  check_upgrade_compat.py  test_commands.cpp  test_crypto_safe.cpp  test_kernel_features.cpp  test_main.cpp  test_metrics.cpp  test_network.cpp  test_policy.cpp  test_result.cpp  test_sha256.cpp  test_tracing.cpp  test_utils.cpp
tests/e2e/: test_bypasses.cpp
tests/event_samples/: block.json  exec.json
tests/fixtures/upgrade/: policy_v1.conf  policy_v2.conf
tests/fuzz/: fuzz_event_handling.cpp  fuzz_network_rules.cpp  fuzz_path_validation.cpp  fuzz_policy_parser.cpp  fuzz_signed_bundle.cpp
